2011-11-27  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* coders/dpx.c: For packed 10 bits, datums are now represented in
	the same (reversed) order for all RGB and YCbCr formats.
	Previously YCbCr 4:4:4 formats were not swapping the word datums
	because the only real-world files encountered did not swap the
	word datums.  Resolves SourceForge bug 2057277 "DPX 10bit CbYCr
	Image seems to be wrong".

	* wand/magick_wand.c (MagickWriteImagesFile): New function to
	append images to a provided file handle.  Resolves SourceForge
	issue 3046868 "added MagickWriteImagesFile".

	* magick/constitute.c (WriteImagesFile): New function to append
	images to a provided file handle.

	* magick/blob.c (OpenBlob): Don't rewind already open file handle
	passed to OpenBlob() since we don't know the intended state of
	this file handle, and because it prevents appending to an existing
	file.  This change is part of the fix for SourceForge issue
	3046868 "added MagickWriteImagesFile".

	* wand/magick_wand.c (MagickSetImageSavedType): New function to
	allow specifying the storage type used when saving the file
	(rather than changing the current image characteristics).
	Resolves SourceForge patch 3110185
	"MagickGetImageSavedType()/MagickSetImageSavedType() API".
	(MagickGetImageSavedType): Return the storage type which will be
	used when the image is saved.

	* magick/annotate.c (RenderFreetype): Add support for drawing text
	using a bitmap font.  Resolves SourceForge patch 3230719 "add
	support for drawing text with bitmap font to annotate.c".

	* magick/profile.c (AppendImageProfile): Don't leak profile buffer
	while appending a chunk to an existing profile.  Resolves
	SourceForge patch 3294496 "Fix a memory leak in
	profile.c(AppendImageProfile)".

2011-11-26  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* magick/command.c (BenchmarkImageCommand): Include the number of
	threads used in the benchmark results output.