@@ -10,5 +10,5 @@
 
 #define public MagickPackageName "GraphicsMagick"
 #define public MagickPackageVersion "1.4"
-#define public MagickPackageVersionAddendum ".020111127"
-#define public MagickPackageReleaseDate "snapshot-20111127"
+#define public MagickPackageVersionAddendum ".020111128"
+#define public MagickPackageReleaseDate "snapshot-20111128"
